static/css/style.css
/* ... */
.card-img-container {
   width: 100%;
   height: 260px;
   display: flex;
}

.card-img-top {
    width: 90%;
    border: solid 2px white;
    border-radius: 4px;
    margin-left: 5%;
    margin-top: 5%;
    margin-bottom: 1.5rem;
    object-fit: scale-down;
    background: #ffffff;
}

.card-body {
    width: 90%;
    min-height: 150px;
    background: white;
    margin-left: 5%;
    border-radius: 4px;
    flex: 0;
}

.card-buttons {
    display: inline-flex;
    justify-content: center;
}

.hero-image {
    border: solid 2px white;
    border-radius: 4px;
    width: 100%;
}

.record-bg-light {
    background-color:#ffffff;
    padding: 0.5rem;
    padding-top: 1rem;
}

.record-bg-dark {
    background-color: #0B5657;
    text-align: center;
    padding: 0.5rem;
    padding-top: 1rem;
}

.record-bg-light a {
    color: #0B5657;
}

.record-bg-dark a {
    color: #ffffff;
}

.record-bg-light a:hover {
    color: #178484;
    text-decoration: underline;
}

.record-bg-dark a:hover {
    color: antiquewhite;
    text-decoration: underline;
}
.passport-container {
    background-image: url(https://res.cloudinary.com/djck2eqxo/image/upload/v1666627962/scribble-light_ubbfq8.png);
    background-color: #0ca9a9;
    border: solid 2px white;
    border-radius: 4px;
    margin-bottom: 2rem;
    padding: 2rem;
    box-shadow: 10px 10px 15px rgb(0 0 0 / 50%);
}

.passport-separator-rule {
    color: white;
    width: 50%;
    margin-left: 25%;
    margin-top: 1rem;
}

.passport-item {
    max-height: 400px;
    max-width: 100%;
    margin-top: 1rem;
    margin-bottom: 1rem;
    border-radius: 4px;
}

.passport-card {
    width: 90%;
    padding: 1.5rem;
    background-color: white;
    border: solid 2px #0B5657;
    border-radius: 4px;
    margin-top: 1.5rem;
    padding-bottom: 20%;
    word-break: break-word;
    text-align: center;
}

.passport-title {
    font-size: larger;
    color: #ffffff;
    background: #0B5657;
    border-radius: 4px;
    padding: 0.5rem;
    width: 70%;
    margin-left: 15%;
    margin-bottom: 1.5rem;
}

.card-subtitle {
    font-size: large;
}

.vert-center {
    display: flex;
    justify-content: center;
    align-items: center;
}

.passport-title-row {
    background-color: white;
    padding: 1rem;
    border-radius: 4px;
    border: solid 2px #0B5657;
    margin-top: 1rem;
}
.passport-heading {
width: 92%;
    background-color: white;
    padding: 1rem;
    border-radius: 4px;
    border: solid 2px #0B5657;
    margin-left: 4%;
}

.passport-text-row {
    width: 94%;
    background-color: white;
    padding: 1rem;
    border-radius: 4px;
    margin: 1rem;
}
.passport-row {
    width: 94%;
    margin-left: 3%;
    margin-bottom: 1rem;
}

.passport-text-item {
    font-size: 2vw;
    color: #0B5657;
    margin-left: 2vw;
    margin-top: 1vw;
}

.passport-info-item-box {
    width: auto;
    margin-bottom: 0.5rem;
}

.passport-info-text {
    width: 75%;
    display: inline-block;
}

.passport-info-data {
    width: 75%;
    display: inline-block;
    color: #9500a0
}

.passport-cloudinary-item {
    width: 100%;
}

.passport-card-text-heading {
    text-align: center;
    color: #0B5657;
    border-radius: 4px;
    background: white;
    padding-top: 0.5rem;
}

.passport-card-icon {
    color: #0B5657;
    font-size: x-large;
}

.passport-underscore {
    text-align: center;
    color: #9500a0;
}

.passport-details-underscore {
    color: #9500a0;
}

.passport-button-row {
    width: 100%;
    margin-top: 2rem;
    margin-left: 1%;
    text-align: center;
}

.passport-options {
    margin-top: 1rem;
    font-size: 12px;
    padding: 0.5rem 2rem;
    text-transform: uppercase;
    letter-spacing: 2.5px;
    font-weight: 500;
    color: #198754;
    background-color: #fff;
    border: none;
    border-radius: 4px;
    box-shadow: 0px 8px 15px rgb(0 0 0 / 10%);
    transition: all 0.3s ease 0s;
    cursor: pointer;
    outline: none;
}

.passport-options:hover {
    background-color: #1b5757;
    box-shadow: 0px 10px 15px rgba(185, 246, 241, 0.74);
    color: #fff;
    transform: translateY(-4px);
}

.block-text {
    background: white;
    text-align: center;
    width: 95%;
    padding: 1rem;
    margin-top: 1rem;
    margin-left: 2.5%;
    border-radius: 4px;
}

#valid-pupil-id {
    display: none;
}


#set-teacher-id {
    display: none;
}

.callout-container {
    height: 100vh;
    display: flex;
    align-items: center;
    justify-content: center;
    position: relative;
}

.opaque-overlay {
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    background-color: rgba(0, 0, 0, 0.5);
}

.content-container {
    padding-top: 75px;
    padding-bottom: 75px;
}

/* **** MEDIA QUERIES **** */

@media screen and (max-width: 700px) {
    
    .navbar {
        background-image: url(https://res.cloudinary.com/djck2eqxo/image/upload/v1666627962/scribble-light_ubbfq8.png), linear-gradient(to right, #ffffff, #ffffff, #0ca9a9, #0ca9a9, #0ca9a9);
    }

    .form-text-row {
        width: 90%;
        margin-left: 5%;
    }

    .form-center {
        width: 90%;
        margin-left: 5%;
    }
}

@media screen and (max-width: 600px) {
    
    .auth-logo {
        width: 60%;
    }

    .loading-txt {
        width: 45%;
        left: 25%;
    }

    #load-gif {
        width: 45%;
        left: 25%;
    }


}

@media screen and (max-width: 500px) {
    
    .navbar {
        background-image: url(https://res.cloudinary.com/djck2eqxo/image/upload/v1666627962/scribble-light_ubbfq8.png), linear-gradient(to right, #ffffff, #ffffff, #0ca9a9, #0ca9a9);
    }

    .hero-text h1 {
        font-size: large;
    }

    #hero-strap-text {
        font-size: large;
    }
}
/* ... */

